--- a/composer.json
+++ b/composer.json
@@ -6,22 +6,22 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^2.0",
+        "doctrine/dbal": "^3.6",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^2.7",
+        "jenssegers/agent": "^2.6",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "3.0.*@beta",
-
-        "barryvdh/laravel-dompdf": "^2.0",
-        "doctrine/dbal": "^3.6",
-        "intervention/image": "^2.7",
-        "jenssegers/agent": "^2.6",
         "league/csv": "^9.9",
+        "livewire/livewire": "^2.12",
         "maatwebsite/excel": "^3.1",
         "myclabs/php-enum": "^1.8",
         "santigarcor/laratrust": "^7.1",
         "simplesoftwareio/simple-qrcode": "*",
-        "spatie/laravel-activitylog": "^4.7"
+        "spatie/laravel-activitylog": "^4.7",
+        "spatie/laravel-data": "^3.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
