--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "santigarcor/laratrust": "^7.1",
         "simplesoftwareio/simple-qrcode": "*",
         "spatie/laravel-activitylog": "^4.7",
-        "spatie/laravel-data": "^3.7"
+        "spatie/laravel-data": "^3.7",
+        "spatie/laravel-medialibrary": "^10.0.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
