--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,11 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Lib/constants.php",
+            "app/Lib/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
