--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
         "files": [
             "app/Lib/constants.php",
             "app/Lib/helpers.php",
-            "app/Helpers/helpers.php"
+            "app/Helpers/helpers.php",
+            "app/Helpers/finance_helpers.php"
         ]
     },
     "autoload-dev": {
