--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
             "app/Lib/constants.php",
             "app/Lib/helpers.php",
             "app/Helpers/helpers.php",
-            "app/Helpers/finance_helpers.php"
+            "app/Helpers/finance_helpers.php",
+            "app/Helpers/human_resource.php"
         ]
     },
     "autoload-dev": {
